--- a/project_template/templates/project_template/index.html
+++ b/project_template/templates/project_template/index.html
@@ -9,6 +9,7 @@
         <div class="topcorner">
             <p>Project Name</p>
             <p>Student Name (NetID)</p>
+            <p>Haotian Liu(hl678)</p>
         </div>
         
         <form class="form-inline global-search" method='GET'>
