--- a/mysite/static/main.css
+++ b/mysite/static/main.css
@@ -1,38 +1,94 @@
-@media (min-width: 1200px) {
+/* GENERAL STYLES */
+* {
+    font-family: Futura, sans-serif;
+}
+
 .container {
-    max-width: 970px;
+    display: flex;
+    flex-direction: column;
 }
+
+/*@media (min-width: 1200px) {
+    .container {
+        max-width: 970px;
+    }
+}*/
+
+@media (min-width: 800px) {
+    .container {
+        flex-direction: row;
+        justify-content: space-around;
+    }
 }
-@media (min-width:400px){
-.global-search {
-padding: 20px 0;
-text-align:center;
+
+.container > * {
+    margin: 0 15px;
+    width: 100%;
 }
-body {
-padding-top: 15%;
-padding-bottom: 15px;
+
+.title {
+    font-size: 12px;
+    font-weight: 100;
+    letter-spacing: 3px;
+    text-transform: uppercase;
 }
-.global-search {
-text-align:center;
-padding:10px;
+
+/* HEAD STYLES */
+.head {
+    align-items: center;
+    display: flex;
+    font-size: 50px;
+    margin: 0 15px;
 }
-.global-search .form-control {
-width:500px;
+
+.head .head-title {
+    flex: 0 1 80%;
 }
-.global-search * {
-display:inline-block;
-margin-bottom:0;
+
+.head .names {
+    flex: 0 1 20%;
+    font-size: 10px;
+    text-align: end;
 }
+
+/* FORM STYLE */
+.btn {
+    background-color: #006999;
+    border: none;
+    width: 100%;
 }
-.topcorner{
-position:absolute;
-top:2%;
-right:2%;
+
+.btn:hover {
+    background-color: #33beff;
+    transition: 300ms background-color ease;
 }
-.btn{
-background-color: #4285F4;
-border: none
+
+/* PAGINATION */
+.pagination {
+    font-size: 10px;
+    text-align: center;
+    width: 100%;
 }
-.step-links a{
-color: #4285F4;
+
+.step-links a {
+    color: #006999;
+}
+
+/* QUOTE STYLE */
+.quote {
+    background-color: #e6f7ff;
+    border: 1px solid #f2f2f2;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px 0;
+    width: 100%;
+}
+
+.quote:nth-of-type(2n) {
+    background-color: #fff;
+}
+
+.quote .author {
+    font-size: 10px;
+    text-transform: uppercase;
 }
