--- a/project_template/templates/project_template/index.html
+++ b/project_template/templates/project_template/index.html
@@ -3,55 +3,58 @@
         <link rel="stylesheet" href="/static/bootstrap.min.css">
         <link rel="stylesheet" href="/static/main.css">
     </head>
-    
+
     <body>
-        <!-- TODO: Please change lines 10 and 11 according to your actual project name and student names-->
-        <div class="topcorner">
-            <p>Project Name</p>
-            <p>Student Name (NetID)</p>
-            <p>Haotian Liu(hl678)</p>
+        <div class="head">
+            <p class="head-title">Quote Matcher</p>
+            <p class="names">Ariel Gleitman (ag739)<br>Dean Olin (dwo27)<br>Galen Weld (gcw33)<br>Haotian Liu (hl678)</p>
         </div>
-        
-        <form class="form-inline global-search" method='GET'>
-            <h1 style="font-size: 55px; font-family:Futura; color: #4285F4">
-                C
-                <font color=#EA4335>S</font>
-                <font color=#FBBC05>4</font>
-                3
-                <font color=#34A853>0</font>
-                <font color=#EA4335>0</font>
-            </h1>
-            
-            <br><br>
-            
-            <div class="form-group">
-                <input id="input" type="text" name="search" class="form-control" placeholder="Your Input">
+
+        <div class="container">
+            <form class="form-group" method='GET'>
+                <p class="title">Enter Query Here</p>
+                <div class="form-group">
+                    <textarea id="input" type="text" name="search" class="form-control" placeholder="Your Input" rows="15"></textarea>
+                </div>
+                <button type="submit" class="btn btn-info">GO</button>
+            </form>
+
+            <div class="form-inline global-search">
+                <p class="title">Results</p>
+
+                {% if output %}
+
+                    {% for doc, line in output %}
+                        <div class="quote">
+                            <p>{{line}}</p>
+                            <p class="author">by {{doc}}</p>
+                        </div>
+                    {% endfor %}
+
+                    <div class="pagination">
+                        <span class="step-links">
+                            {% if output.has_previous %}
+                            <a href= "{{magic_url}}&page={{ output.previous_page_number }}">previous</a>
+                            {% endif %}
+                            
+                            <!-- Showing the page numbers in Html Page -->
+                            <span class="current">
+                            Page {{ output.number }} of {{ output.paginator.num_pages }}
+                            </span>
+                            
+                            {% if output.has_next %}
+                            <a href= "{{magic_url}}&page={{ output.next_page_number }}">next</a>
+                            {% endif %}
+                        </span>
+                    </div>
+
+                {% else %}
+
+                    <p>Results will appear here on valid input</p>
+
+                {% endif %}
             </div>
-            <button type="submit" class="btn btn-info"> Go! </button>
-        </form>
-        
-        <div class="form-inline global-search">
-            <h4>Output</h4><br>
-            {% for line in output %}
-                {{line}}<br>
-            {% endfor %}
-            
-            <div class="pagination">
-                <span class="step-links">
-                    {% if output.has_previous %}
-                    <a href= "{{magic_url}}&page={{ output.previous_page_number }}">previous</a>
-                    {% endif %}
-                    
-                    <!-- Showing the page numbers in Html Page -->
-                    <span class="current">
-                    Page _{{ output.number }}_ of _{{ output.paginator.num_pages }}_
-                    </span>
-                    
-                    {% if output.has_next %}
-                    <a href= "{{magic_url}}&page={{ output.next_page_number }}">next</a>
-                    {% endif %}
-                </span>
-            </div>
+
         </div>
     </body>
 </html>
