--- a/project_template/templates/project_template/index.html
+++ b/project_template/templates/project_template/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="/static/bootstrap.min.css">
+        <!-- <link rel="stylesheet" href="/static/bootstrap.min.css"> -->
         <link rel="stylesheet" href="/static/main.css">
     </head>
 
