smooth scrolling on quote click, fixed bug in wikipedia api

--- a/project_template/templates/project_template/index.html
+++ b/project_template/templates/project_template/index.html
@@ -104,6 +104,7 @@
                             $("#wiki-title").html("From <a href='" + data.pageurl + "' target='_blank'>Wikipedia</a>...");
                             $("#wiki-text").html(data.extraction);
                         }
+                        $("html, body").animate({ scrollTop: 0 }, "slow");
                     }
                 });  
             });
